Ensures the compass background doesn't overlap map elements
Fixes #30

--- a/VirtualGloomhavenBoard/wwwroot/scss/_layout.scss
+++ b/VirtualGloomhavenBoard/wwwroot/scss/_layout.scss
@@ -342,8 +342,7 @@ html {
                 position: relative;
                 padding: 40px;
 
-                &:after {
-                    content: '';
+                .map-bg {
                     position: absolute;
                     top: 0;
                     right: 0;
